--- a/tox.ini
+++ b/tox.ini
@@ -7,16 +7,11 @@ python_files = tests.py test_*.py *_tests.py
 
 [travis]
 python =
-       3.6: py36
-       3.7: py37, lint, docs
-       3.8: py38
+       2.7: py27
 
 [travis:env]
 DJANGO =
         1.11: django111
-        2.1: django21
-        2.2: django22, lint, docs
-        3.0: django30
 
 [testenv]
 commands = pytest
@@ -28,9 +23,6 @@ setenv =
         TOX_ENVNAME={envname}
 deps =
         django111: Django==1.11.*
-        django21: Django==2.1.*
-        django22: Django==2.2.*
-        django30: Django==3.0b1
         minio: minio
         minioknown: minio==4.0.21
         -rdev-requirements.txt
@@ -38,19 +30,15 @@ deps =
 [testenv:lint]
 setenv=
     PYTHONWARNINGS=ignore
-basepython = python3.7
+basepython = python2.7
 deps = flake8==3.7.8
 commands = flake8 --config .flake8rc
 
 [testenv:docs]
-basepython = python3.7
+basepython = python2.7
 deps = mkdocs
 commands = mkdocs build
 
 [tox]
 envlist =
-       {py36,py37,py38}-django22-minioknown
-       py37-django{111,21,30}-minioknown
-       py37-django22-minio
-       lint
-       docs
+       py-27-django111-minioknow
